--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: 读立写生
+title: <?php echo("桑小凯"); 
 header-img: "img/Xacebook.jpg"
 tagline: "cn"  
 description: "陈素封|读而立·写而生"  
-baseurl: ""
+baseurl: "public"
 url: "http://www.cnfeat.com"  
 
 # About/contact
