--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: echo("桑小凯");
 header-img: "img/Xacebook.jpg"
 tagline: "cn"  
 description: "sangxiaokai/我只是一个想做大事的开发者"  
-baseurl: "public"
+baseurl: ""
+publicurl:"public"
 url: "https://sangxiaokai.github.io"  
 
 # About/contact
