--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: echo("桑小凯"); 
 header-img: "img/Xacebook.jpg"
 tagline: "cn"  
-description: "sangxiaokai/我只是一个想做大事的开发者"  
+description: "我只是一个想做大事的开发者"  
 baseurl: ""
 publicurl:"public"
 url: "https://sangxiaokai.github.io"  
