--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: "img/Xacebook.jpg"
 tagline: "cn"  
 description: "我只是一个想做大事的开发者"  
 baseurl: ""
-publicurl:"public"
+publicurl:"/public"
 url: "https://sangxiaokai.github.io"  
 
 # About/contact
